objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Additional_Email_1__c</fullName>
        <description>The first additional email to send data owner requests to</description>
        <label>Additional Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Email_2__c</fullName>
        <description>The second additional email to send data owner requests to</description>
        <label>Additional Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Email_3__c</fullName>
        <description>The third additional email to send data owner requests to</description>
        <label>Additional Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <formula>CASE(TEXT(Brand_Id__c),
"1","TH",
"2","CK",
"4","IZ",
"5","VH",
"6","HT",
"7","SX",
"81","IZE",
"82","VHE",
"83","WRE",
"84","SB",
"8","HTE",
"9","PBE",
"10","OG",
"11","T&amp;C",
"NONE"
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandIdAPIValue__c</fullName>
        <formula>TEXT(Brand_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BrandIdAPIValue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Id__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Brand_Id</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Lookup_Search__c</fullName>
        <formula>CASE(TEXT(Brand_Id__c),
"1", "Tommy",
"2", "Calvin Klein",
"4", "Izod",
"5", "Van Heusen",
"7", "Speedo USA",
"8", "Heritage Ecom",
"9", "Partner Brands ",
"81", "IZOD.com",
"82", "Van Heusen.com",
"83", "Warner",
"84", "Style Bureau",
"11", "True&amp;Co",
"10", "Olga",
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Lookup Search</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bass</fullName>
                </value>
                <value>
                    <fullName>Calvin Klein</fullName>
                    <label>Calvin Klein</label>
                </value>
                <value>
                    <fullName>Heritage Ecom</fullName>
                </value>
                <value>
                    <fullName>Izod</fullName>
                </value>
                <value>
                    <fullName>IZOD.com</fullName>
                </value>
                <value>
                    <fullName>Partner Brands</fullName>
                    <label>Partner Brands</label>
                </value>
                <value>
                    <fullName>Speedo</fullName>
                </value>
                <value>
                    <fullName>Style Bureau</fullName>
                    <label>Style Bureau</label>
                </value>
                <value>
                    <fullName>Tommy Hilfiger</fullName>
                </value>
                <value>
                    <fullName>Van Heusen</fullName>
                </value>
                <value>
                    <fullName>Van Heusen.com</fullName>
                    <label>Van Heusen.com</label>
                </value>
                <value>
                    <fullName>Warners.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BulkBuyerOld__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BulkBuyerOld</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BulkBuyer__c</fullName>
        <formula>Account.BulkBuyer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bulk Buyer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CallOptinStatus__c</fullName>
        <label>CallOptinStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
                <value>
                    <fullName>U</fullName>
                    <isActive>false</isActive>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Channel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact 18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Search_Email__c</fullName>
        <label>Contact Search Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryOfCapture__c</fullName>
        <label>Country of Capture</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedByMethod__c</fullName>
        <label>Created By Method</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerRequestDNMOld__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CustomerRequestDNMOld</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerRequestDNM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CustomerRequestDNM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <description>Set as external Id to get it indexed</description>
        <externalId>true</externalId>
        <label>Customer Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateOfDoNotDirectMail__c</fullName>
        <label>Date Of Do Not Direct Mail</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <formula>Account.Deceased__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decoy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decoy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DirectMailOptin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Mail Optin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DirectMailUndeliverable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Mail Undeliverable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoNotDirectMailReason__c</fullName>
        <label>Do Not Direct Mail Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>A - Email Address Only</label>
                </value>
                <value>
                    <fullName>HM</fullName>
                </value>
                <value>
                    <fullName>HN</fullName>
                </value>
                <value>
                    <fullName>HNS</fullName>
                </value>
                <value>
                    <fullName>HS</fullName>
                </value>
                <value>
                    <fullName>HT</fullName>
                </value>
                <value>
                    <fullName>HV</fullName>
                </value>
                <value>
                    <fullName>HVS</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>NHS</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>N - NCOA</label>
                </value>
                <value>
                    <fullName>NS</fullName>
                </value>
                <value>
                    <fullName>NT</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                    <label>S - Standardization</label>
                </value>
                <value>
                    <fullName>ST</fullName>
                </value>
                <value>
                    <fullName>TS</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                    <label>T - Store Address</label>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>VS</fullName>
                </value>
                <value>
                    <fullName>VT</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                    <isActive>false</isActive>
                    <label>U - Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Sync_with_SFMC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field value is true, then SFMC will not sync this record with it.</description>
        <label>Do Not Sync with SFMC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailDeliverabilityStatus__c</fullName>
        <label>Email Deliverability Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>normal</fullName>
                    <default>true</default>
                    <label>normal</label>
                </value>
                <value>
                    <fullName>held</fullName>
                </value>
                <value>
                    <fullName>bounce</fullName>
                </value>
                <value>
                    <fullName>unsub</fullName>
                </value>
                <value>
                    <fullName>deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailOptDownDate__c</fullName>
        <label>Email Opt Down Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmailOptDownStatus__c</fullName>
        <label>Email Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>receive ALL</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>1 or 2 per week</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>max 2 per month</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailOptInDate__c</fullName>
        <label>Email Opt-in Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailOptInStatus__c</fullName>
        <label>Email Opt-in</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailOptOutDate__c</fullName>
        <label>Email Opt-out Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailOptOutReason__c</fullName>
        <label>Email Opt Out Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ECOA</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                    <label>IN - I am no longer interested in these emails</label>
                </value>
                <value>
                    <fullName>MA</fullName>
                    <label>MA - I receive too many emails</label>
                </value>
                <value>
                    <fullName>ML</fullName>
                    <label>ML - I don’t remember signing up for this mailing list</label>
                </value>
                <value>
                    <fullName>OT</fullName>
                    <label>OT - Other</label>
                </value>
                <value>
                    <fullName>RE</fullName>
                    <label>RE - I don’t think the content is relevant</label>
                </value>
                <value>
                    <fullName>SPAM</fullName>
                </value>
                <value>
                    <fullName>SPAM COMPL</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                    <label>SP - I think these emails are Spam</label>
                </value>
                <value>
                    <fullName>UNSUBSCRIB</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                    <isActive>false</isActive>
                    <label>U - Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailOrigSource__c</fullName>
        <label>EmailOrigSource</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailUndeliverableDate__c</fullName>
        <label>Email Undeliverable Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Opt_in_Date_formula__c</fullName>
        <formula>IF( Source_System__c = "POS", DATEVALUE(EmailOptInDate__c) + 1, DATEVALUE(EmailOptInDate__c))</formula>
        <label>Email Opt-in Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fraud__c</fullName>
        <formula>Account.Fraud__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fraud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>TEXT(Account.Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeStore__c</fullName>
        <label>HomeStore</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E</fullName>
                    <label>English</label>
                </value>
                <value>
                    <fullName>F</fullName>
                    <label>French</label>
                </value>
                <value>
                    <fullName>U</fullName>
                    <isActive>false</isActive>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Latest_Source__c</fullName>
        <label>Latest Source System</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoyaltyFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LoyaltyFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoyaltyID__c</fullName>
        <externalId>true</externalId>
        <label>Loyalty ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoyaltyMergeDate__c</fullName>
        <label>LoyaltyMergeDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loyalty_Optin_Date__c</fullName>
        <label>Loyalty Optin Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loyalty_Optin_Date_form__c</fullName>
        <formula>IF( Source_System__c = "POS", DATEVALUE(Loyalty_Optin_Date__c) + 1, DATEVALUE(Loyalty_Optin_Date__c))</formula>
        <label>Loyalty Optin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MailOptinStatus__c</fullName>
        <label>MailOptinStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
                <value>
                    <fullName>U</fullName>
                    <isActive>false</isActive>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MobileID__c</fullName>
        <description>Unique mobile Identifier</description>
        <externalId>true</externalId>
        <label>MobileID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_Carrier__c</fullName>
        <label>Mobile Carrier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PVHCreatedDate__c</fullName>
        <label>PVHCreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PVHCreatedDate_form__c</fullName>
        <formula>IF(HOUR(TIMEVALUE(PVHCreatedDate__c))&lt;09,DATEVALUE(PVHCreatedDate__c) + 1,DATEVALUE(PVHCreatedDate__c))</formula>
        <label>PVHCreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PVHLastModifiedDate__c</fullName>
        <label>PVHLastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PossibleDuplicateRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Possible Duplicate Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrefCenterEmailTypes__c</fullName>
        <label>Email Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PrefCenterInterests__c</fullName>
        <label>Email Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>Anchor Stores</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>CK Collection</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <label>Company Stores</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>Ecomm Main Site</label>
                </value>
                <value>
                    <fullName>G</fullName>
                    <label>Ecomm - New</label>
                </value>
                <value>
                    <fullName>T</fullName>
                    <label>EComm Outlet</label>
                </value>
                <value>
                    <fullName>H</fullName>
                    <label>Home</label>
                </value>
                <value>
                    <fullName>F</fullName>
                    <label>International</label>
                </value>
                <value>
                    <fullName>K</fullName>
                    <label>Kids</label>
                </value>
                <value>
                    <fullName>L</fullName>
                    <label>Loyalty</label>
                </value>
                <value>
                    <fullName>M</fullName>
                    <label>Mens</label>
                </value>
                <value>
                    <fullName>R</fullName>
                    <label>Retail Store</label>
                </value>
                <value>
                    <fullName>O</fullName>
                    <label>Tommy.com</label>
                </value>
                <value>
                    <fullName>W</fullName>
                    <label>Womens</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReverseAppend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverse Append</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingCentralChannel__c</fullName>
        <description>Field to store channel value of incoming call temporarily, use this to populate case channel field later.</description>
        <label>RingCentralChannel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMSCustPreferences__c</fullName>
        <label>SMSCustPreferences</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMSLocale__c</fullName>
        <label>SMSLocale</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMSNumber__c</fullName>
        <label>SMSNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SMSOptInDate__c</fullName>
        <label>SMS Opt-in Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMSOptOutDate__c</fullName>
        <label>SMS Opt-out Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMSOptinStatus__c</fullName>
        <label>SMS Opt-in</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMSOrigSource__c</fullName>
        <label>SMSOrigSource</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMSResponseData__c</fullName>
        <label>SMSResponseData</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMSStatus__c</fullName>
        <label>SMSStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>INACTIVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMS_Is_Valid__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SMS Is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignupStore__c</fullName>
        <label>SignupStore</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Source from Outside Lists.</description>
        <inlineHelpText>Source from Outside Lists.</inlineHelpText>
        <label>Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>INACTIVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StoreOfCapture__c</fullName>
        <label>Store Of Capture</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StoreOfPreferenceLanguage__c</fullName>
        <label>Store of Preference Language</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StorePreference__c</fullName>
        <description>Preferred store</description>
        <label>Store Preference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Type__c</fullName>
        <description>The type of system for which the Data Owner is Responsible</description>
        <label>System Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>External - Managed By PVH</fullName>
                </value>
                <value>
                    <fullName>Supplemental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Undeliverable_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Undeliverable Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueLoyaltyId__c</fullName>
        <externalId>true</externalId>
        <label>UniqueLoyaltyId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UnsubReason__c</fullName>
        <label>Unsubscribe Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WelcomeSource__c</fullName>
        <label>Welcome Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>1-Overlay</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>2-Footer</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>3-My Account</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>4-Guest Checkout</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZdLastModifiedDate__c</fullName>
        <description>LastModifiedDate of Zendesk system</description>
        <label>ZdLastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZdMatchType__c</fullName>
        <label>ZdMatchType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MultipleMatchByEmailFirstName</fullName>
                </value>
                <value>
                    <fullName>MultipleMatchByPhoneFirstName</fullName>
                </value>
                <value>
                    <fullName>New-NoEmailMatch</fullName>
                </value>
                <value>
                    <fullName>New-noEmailorPhoneInSource</fullName>
                </value>
                <value>
                    <fullName>New-NoPhoneMatch</fullName>
                </value>
                <value>
                    <fullName>UniqueMatchByEmail</fullName>
                </value>
                <value>
                    <fullName>UniqueMatchByEmailFirstName</fullName>
                </value>
                <value>
                    <fullName>UniqueMatchByPhone</fullName>
                </value>
                <value>
                    <fullName>UniqueMatchByPhoneFirstName</fullName>
                </value>
                <value>
                    <fullName>UniqueMatchByFirstName</fullName>
                    <isActive>false</isActive>
                    <label>UniqueMatchByFirstName</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZdMiddleName__c</fullName>
        <label>ZdMiddleName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdOtherAddress__c</fullName>
        <label>ZenDesk Other Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZdPVHUserId__c</fullName>
        <externalId>true</externalId>
        <label>Zendesk PVH User Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ZdPossibleFraud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZenDesk Possible Fraud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZdProfExtId__c</fullName>
        <externalId>true</externalId>
        <label>ZdProfExtId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdTnCUserId__c</fullName>
        <externalId>true</externalId>
        <label>Zendesk T&amp;C User Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ZdUniqueMatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZdUniqueMatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zeta_Callout_Response__c</fullName>
        <label>Zeta Callout Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fmlAccountId__c</fullName>
        <formula>Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fmlAccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fmlCreatedById__c</fullName>
        <formula>CreatedBy.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fmlCreatedById</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fmlLastModifiedByName__c</fullName>
        <description>Field for PVH QA's reporting needs</description>
        <formula>LastModifiedBy.FirstName+' '+LastModifiedBy.LastName</formula>
        <label>fmlLastModifiedByName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fmlOwnerID__c</fullName>
        <formula>Owner.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fmlOwnerID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fmlRecordTypeId__c</fullName>
        <formula>RecordType.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fmlRecordTypeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isEmployee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tempEnableTriggeredSend__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A temp field needed for safe testing of triggered sends. Eventually not required.</description>
        <label>tempEnableTriggeredSend</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>